nav alignment fixed

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -55,6 +55,11 @@ body {
        3.  Layout
 =========================================*/
 
+main {
+  margin: 0 auto;
+  max-width: 90%;
+}
+
 a {
   text-decoration: none;
   color: var(--color-white);
@@ -82,31 +87,33 @@ a {
 
 /* --------- nav -----------*/
 nav {
-  display: flex;
-  justify-content: space-between;
   background-color: var(--color-dark);
-  padding: 0.5rem;
+  padding: 0.6rem;
+  max-width: 90%;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 1fr 50% 1fr;
 }
 
 .nav {
   display: flex;
   align-items: center;
-  padding: 0 2rem;
   font-size: 1rem;
 }
 
-/* .nav:first-child {
-  justify-content: flex-start;
+.nav:first-child {
+  grid-column: 1/2;
 }
 .nav:nth-child(2) {
-  justify-content: center;
+  grid-column: 2/3;
+  margin: 0 auto;
 }
 .nav:last-child {
-  justify-content: flex-end;
-}  */
+  grid-column: 3/4;
+}
 
 .nav__link {
-  padding: 0 0.5rem;
+  padding: 0 0.7rem;
 }
 
 .nav__link:hover {
@@ -150,6 +157,9 @@ header {
   flex-direction: column;
   align-items: center;
   justify-content: center; */
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 10% 60% 30%;
   background-image: url('../img/header-img.png');
   background-size: cover;
   background-position: center;
@@ -165,10 +175,17 @@ header {
   /*   font-family: var(--ff-dosis); */
   text-transform: uppercase;
   text-align: center;
+  grid-row: 2/3;
+  grid-column: 1 / 3;
 }
-/* .header__names{
-  justify-self: center; 
-} */
+
+.header__location {
+  grid-row: 1/2;
+  grid-column: 2/3;
+  justify-self: end;
+  /*   padding: 7% 10%; */
+  padding-block-start: 7%;
+}
 
 /*** --- countdown --- ***/
 
